# stb

./: CMakeLists.txt
cmake/: header.template.in
